# panorama

./: .CLAUDE.md.swp  .env.example  .eslintignore  .eslintrc.json  .gitignore  .meteorignore  CLAUDE.md  Makefile  PLAN.md  README.md  RELEASE-NOTES.md  backup.sh  code-mode.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  eslint.config.cjs  eslint.config.js  package-lock.json  package.json  start-local.sh
.deploy/: backup-databases.sh  mup.js  settings.json
.meteor/: .id  packages  versions
backend/: .env.example  Dockerfile  docker-entrypoint.sh  package-lock.json  package.json  tsconfig.tsbuildinfo
client/: main.css  main.html  main.jsx
docs/: 00-context.md  01-roadmap.md  02-tech-notes.md  03-schemas.md  04-electron.md  05-accessing-collections.md  11-feat-userlog.md  12-feature-alarms.md  13-feat-search.md  14-feat-links.md  15-feature-budget.md  16-feature-automatic-reporting.md  17-feature-situation-analyser.md  18-feature-chat.md  19-feature-budget-salaries.md  20-feature-error-logging.md  ai-proxy.md  architecture.md  clean_archi_migration_plan.md  gmail-setup.md  google-calendar-api.md  invitations.md  mcp-agents.md  mcp-email-tools.md  mobile.md  multi-user-migration-plan.md  panorama_mcp_tool_creation.md
electron/: main.js  preload.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
nginx/: panoramix.conf
scripts/: backup.sh  deploy.sh  (+9 more)
(+615 files in other folders)
